re-added, forgot to save progress

--- a/index.html
+++ b/index.html
@@ -39,75 +39,75 @@
 			</tr>
 			<tr>
 				<td>Snippet Seven</td>
-				<td></td>
+				<td>NaN</td>
 			</tr>
 			<tr>
 				<td>Snippet Eight</td>
-				<td></td>
+				<td>13</td>
 			</tr>
 			<tr>
 				<td>Snippet Nine</td>
-				<td></td>
+				<td>27</td>
 			</tr>
 			<tr>
 				<td>Snippet  Ten</td>
-				<td></td>
+				<td>0.6666666</td>
 			</tr>
 			<tr>
 				<td>Snippet Eleven</td>
-				<td></td>
+				<td>undefined</td>
 			</tr>
 			<tr>
 				<td>Snippet Twelve</td>
-				<td></td>
+				<td>25</td>
 			</tr>
 			<tr>
 				<td>Snippet Thirteen</td>
-				<td></td>
+				<td>false</td>
 			</tr>
 			<tr>
 				<td>Snippet Fourteen</td>
-				<td></td>
+				<td>true</td>
 			</tr>
 			<tr>
 				<td>Snippet Fifteen</td>
-				<td></td>
+				<td>2.5</td>
 			</tr>
 			<tr>
 				<td>Snippet Sixteen</td>
-				<td></td>
+				<td>1</td>
 			</tr>
 			<tr>
 				<td>Snippet Seventeen</td>
-				<td></td>
+				<td>50</td>
 			</tr>
 			<tr>
 				<td>Snippet Eighteen</td>
-				<td></td>
+				<td>true</td>
 			</tr>
 			<tr>
 				<td>Snippet Nineteen</td>
-				<td></td>
+				<td>true</td>
 			</tr>
 			<tr>
 				<td>Snippet Twenty</td>
-				<td></td>
+				<td>30</td>
 			</tr>
 			<tr>
 				<td>Snippet Twenty-One</td>
-				<td></td>
+				<td>'point: [10, 73.3]'</td>
 			</tr>
 			<tr>
 				<td>Snippet Twenty-Two</td>
-				<td></td>
+				<td>19</td>
 			</tr>
 			<tr>
 				<td>Snippet Twenty-Three</td>
-				<td></td>
+				<td>-15</td>
 			</tr>
 			<tr>
 				<td>Snippet Twenty-Four</td>
-				<td></td>
+				<td>7</td>
 			</tr>
 		</tbody>
 	</table>
